# pallets

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  plan.md  rust-toolchain  rust-toolchain.toml
.claude/skills/upgrade-polkadot-sdk/: SKILL.md
.claude/skills/upgrade-polkadot-sdk/scripts/: bump-member-versions.sh  derive-sdk-versions.sh
.github/workflows/: check-features.yml  ci.yml
balances/: Cargo.toml  README.md
balances-tx-payment/: Cargo.toml  README.md
balances-tx-payment-extension/: Cargo.toml
balances-tx-payment-extension/src/: balance_conversion.rs  lib.rs  mock.rs  tests.rs
balances-tx-payment/rpc/: Cargo.toml
balances-tx-payment/rpc/runtime-api/: Cargo.toml
balances-tx-payment/rpc/runtime-api/src/: lib.rs
balances-tx-payment/rpc/src/: lib.rs
balances-tx-payment/src/: balance_conversion.rs  lib.rs  mock.rs  tests.rs
balances/rpc/: Cargo.toml
balances/rpc/runtime-api/: Cargo.toml
balances/rpc/runtime-api/src/: lib.rs
balances/rpc/src/: lib.rs
balances/src/: benchmarking.rs  impl_fungibles.rs  lib.rs  mock.rs  tests.rs  weights.rs
bazaar/: Cargo.toml  README.md
bazaar/rpc/: Cargo.toml
bazaar/rpc/runtime-api/: Cargo.toml
bazaar/rpc/runtime-api/src/: lib.rs
bazaar/rpc/src/: lib.rs
bazaar/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
ceremonies/: Cargo.toml  README.md
ceremonies/assignment/: Cargo.toml
ceremonies/assignment/src/: lib.rs  math.rs
ceremonies/meetup-validation/: Cargo.toml
ceremonies/meetup-validation/src/: lib.rs  meetup_scenario_tests.rs  tests.rs
ceremonies/rpc/: Cargo.toml
ceremonies/rpc/runtime-api/: Cargo.toml
ceremonies/rpc/runtime-api/src/: lib.rs
ceremonies/rpc/src/: lib.rs
ceremonies/src/: benchmarking.rs  lib.rs  math.rs  migrations.rs  mock.rs  storage_helper.rs  tests.rs  weights.rs
communities/: Cargo.toml  README.md
communities/rpc/: Cargo.toml
communities/rpc/runtime-api/: Cargo.toml
communities/rpc/runtime-api/src/: lib.rs
communities/rpc/src/: error.rs  lib.rs  tests.rs
communities/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
currencies/: Cargo.toml
currencies/src/: lib.rs  tests.rs
democracy/: Cargo.toml  README.md
democracy/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
faucet/: Cargo.toml  README.md
faucet/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
offline-payment/: Cargo.toml  README.md
offline-payment/core/: Cargo.toml
offline-payment/core/src/: ceremony.rs  circuit.rs  lib.rs  prover.rs
offline-payment/ffi/: Cargo.toml
offline-payment/ffi/src/: lib.rs
offline-payment/src/: benchmarking.rs  circuit.rs  lib.rs  mock.rs  prover.rs  tests.rs  verifier.rs  weights.rs
personhood/: Cargo.toml
personhood-oracle/: Cargo.toml
personhood-oracle/src/: lib.rs  mock.rs  tests.rs
personhood/src/: lib.rs
primitives/: Cargo.toml  README.md
primitives/core/: Cargo.toml  README.md
primitives/core/src/: bip340.rs  bs58_verify.rs  lib.rs  math.rs  random_number_generator.rs  random_permutation.rs  serde.rs
primitives/src/: balances.rs  bazaar.rs  bs58_verify.rs  ceremonies.rs  common.rs  communities.rs  democracy.rs  error.rs  faucet.rs  lib.rs  proposals.rs  random_number_generator.rs  random_permutation.rs  reputation_commitments.rs  scheduler.rs  storage.rs  sybil.rs  treasuries.rs  vouches.rs
proposals/: Cargo.toml
proposals/src/: lib.rs  mock.rs  tests.rs
reputation-commitments/: Cargo.toml  README.md
reputation-commitments/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
reputation-ring/: Cargo.toml  README.md
reputation-ring/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
reputation-rings/: Cargo.toml  README.md
reputation-rings/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
rpc/: Cargo.toml
rpc/src/: error.rs
scheduler/: Cargo.toml  README.md
scheduler/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
scripts/: run_for_all_no_std_crates.sh
sybil-gate/: Cargo.toml
sybil-gate-template/: Cargo.toml
sybil-gate-template/src/: lib.rs  mock.rs  tests.rs
sybil-gate/proof-request/: Cargo.toml
sybil-gate/proof-request/src/: lib.rs
sybil-gate/src/: lib.rs
sybil-gate/sybil-request/: Cargo.toml
sybil-gate/sybil-request/src/: lib.rs  tests.rs
sybil/gate/: Cargo.toml
sybil/gate/src/: lib.rs  tests.rs
sybil/proof-issuer/: Cargo.toml
sybil/proof-issuer/src/: lib.rs  tests.rs
test-utils/: Cargo.toml
test-utils/src/: helpers.rs  lib.rs  storage.rs
treasuries/: Cargo.toml
treasuries/rpc/: Cargo.toml
treasuries/rpc/runtime-api/: Cargo.toml
treasuries/rpc/runtime-api/src/: lib.rs
treasuries/rpc/src/: lib.rs
treasuries/src/: benchmarking.rs  lib.rs  mock.rs  payout.rs  tests.rs  transfer.rs  weights.rs
vouches/: Cargo.toml  README.md
vouches/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
