[workspace]
resolver = "2"
members = [
    'balances',
    'balances-tx-payment',
    'balances-tx-payment/rpc',
    'balances-tx-payment/rpc/runtime-api',
    'bazaar',
    'bazaar/rpc',
    'bazaar/rpc/runtime-api',
    'ceremonies',
    'ceremonies/rpc',
    'ceremonies/rpc/runtime-api',
    'ceremonies/assignment',
    'communities',
    'communities/rpc',
    'communities/rpc/runtime-api',
    'democracy',
    'faucet',
    'primitives',
    'primitives/core',
    'reputation-commitments',
    'rpc',
    'scheduler',
    'test-utils',
    'treasuries',
    'treasuries/rpc',
    'treasuries/rpc/runtime-api',
    'vouches',
]

[workspace.lints.clippy]
manual_inspect = { level = "allow", priority = 2 }           # Needs substrate fix in `#[pallet]`
multiple_bound_locations = { level = "allow", priority = 2 } # Needs substrate fix in `#[benchmark]`
type_complexity = { level = "allow" }                        # Proposal enum
zero_prefixed_literal = { level = "allow" }                  # Better recognition of fixed-point types
useless_conversion = { level = "allow", priority = 2 }       # Types may change


[workspace.dependencies]
# local pin
encointer-ceremonies-assignment = { path = "ceremonies/assignment", default-features = false }
encointer-meetup-validation = { path = "ceremonies/meetup-validation", default-features = false }
encointer-primitives = { path = "primitives", default-features = false, features = ["serde_derive"] }
encointer-rpc = { path = "rpc" }
ep-core = { path = "primitives/core", default-features = false }
pallet-encointer-balances = { path = "balances", default-features = false }
pallet-encointer-ceremonies = { path = "ceremonies", default-features = false }
pallet-encointer-communities = { path = "communities", default-features = false }
pallet-encointer-reputation-commitments = { path = "reputation-commitments", default-features = false }
pallet-encointer-scheduler = { path = "scheduler", default-features = false }
pallet-encointer-treasuries = { path = "treasuries", default-features = false }
test-utils = { path = "test-utils" }
# rpc apis
encointer-balances-tx-payment-rpc-runtime-api = { path = "balances-tx-payment/rpc/runtime-api" }
pallet-encointer-bazaar-rpc-runtime-api = { path = "bazaar/rpc/runtime-api" }
pallet-encointer-ceremonies-rpc-runtime-api = { path = "ceremonies/rpc/runtime-api" }
pallet-encointer-communities-rpc-runtime-api = { path = "communities/rpc/runtime-api" }
pallet-encointer-treasuries-rpc-runtime-api = { path = "treasuries/rpc/runtime-api" }

# various
array-bytes = "6.1.0"
bs58 = { version = "0.5.0", default-features = false, features = ["alloc"] }
crc = "3.2.1"
fixed = { package = "substrate-fixed", default-features = false, version = "0.6.0" }
geohash = { package = "substrate-geohash", version = "0.14.0" }
impl-serde = { version = "0.5.0", default-features = false }
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
log = { version = "0.4.20", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive", "max-encoded-len"] }
parking_lot = "0.12.1"
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.197", default-features = false, features = ["derive", "alloc"] }
thiserror = "2.0.11"

# polkadot-sdk [no_std]
frame-benchmarking = { version = "44.0.0", default-features = false }
frame-support = { version = "44.0.0", default-features = false }
frame-system = { version = "44.0.0", default-features = false }
pallet-asset-tx-payment = { version = "44.0.0", default-features = false }
pallet-balances = { version = "45.0.0", default-features = false }
pallet-timestamp = { version = "43.0.0", default-features = false }
pallet-transaction-payment = { version = "44.0.0", default-features = false }
sp-api = { version = "38.0.0", default-features = false }
sp-application-crypto = { version = "42.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-core = { version = "38.0.1", default-features = false }
sp-io = { version = "42.0.0", default-features = false }
sp-runtime = { version = "43.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# rpc stuff [std]
jsonrpsee = { version = "0.24.7", features = ["client-core", "server", "macros"] }
jsonrpsee-core = { version = "0.24.7" }
jsonrpsee-types = { version = "0.24.7" }
pallet-transaction-payment-rpc = { version = "47.0.0" }
sc-rpc = "49.0.0"
sc-rpc-api = "0.53.0"
sp-blockchain = "41.0.0"
sp-rpc = "36.0.0"

# dev deps
approx = "0.5.1"
itertools = "0.11.0"
rstest = "0.12.0"
serde_json = "1.0.114"
sp-inherents = "38.0.0"
sp-keyring = "43.0.0"
sp-keystore = "0.44.0"

#[patch.crates-io]
#substrate-fixed = { path = "../substrate-fixed"}
#typenum = { path = "../typenum"}
#geohash = { path = "../geohash"}
