[workspace]
resolver = "2"
members = [
    'balances',
    'balances-tx-payment',
    'balances-tx-payment/rpc',
    'balances-tx-payment/rpc/runtime-api',
    'bazaar',
    'bazaar/rpc',
    'bazaar/rpc/runtime-api',
    'ceremonies',
    'ceremonies/rpc',
    'ceremonies/rpc/runtime-api',
    'ceremonies/assignment',
    'communities',
    'communities/rpc',
    'communities/rpc/runtime-api',
    'democracy',
    'faucet',
    'offline-payment',
    'primitives',
    'primitives/core',
    'reputation-commitments',
    'rpc',
    'scheduler',
    'test-utils',
    'treasuries',
    'treasuries/rpc',
    'treasuries/rpc/runtime-api',
    'reputation-ring',
    'vouches',
]

[workspace.lints.clippy]
manual_inspect = { level = "allow", priority = 2 }           # Needs substrate fix in `#[pallet]`
multiple_bound_locations = { level = "allow", priority = 2 } # Needs substrate fix in `#[benchmark]`
type_complexity = { level = "allow" }                        # Proposal enum
zero_prefixed_literal = { level = "allow" }                  # Better recognition of fixed-point types
useless_conversion = { level = "allow", priority = 2 }       # Types may change


[workspace.dependencies]
# local pin
encointer-ceremonies-assignment = { path = "ceremonies/assignment", default-features = false, version = "21.1.0" }
encointer-meetup-validation = { path = "ceremonies/meetup-validation", default-features = false, version = "21.1.0" }
encointer-primitives = { path = "primitives", default-features = false, features = ["serde_derive"], version = "21.4.0" }
encointer-rpc = { path = "rpc", version = "21.1.0" }
ep-core = { path = "primitives/core", default-features = false, version = "21.0.0" }
pallet-encointer-balances = { path = "balances", default-features = false, version = "21.2.0" }
pallet-encointer-ceremonies = { path = "ceremonies", default-features = false, version = "21.1.0" }
pallet-encointer-communities = { path = "communities", default-features = false, version = "21.1.0" }
pallet-encointer-reputation-commitments = { path = "reputation-commitments", default-features = false, version = "21.1.0" }
pallet-encointer-reputation-ring = { path = "reputation-ring", default-features = false, version = "0.1.0" }
pallet-encointer-scheduler = { path = "scheduler", default-features = false, version = "21.1.0" }
pallet-encointer-treasuries = { path = "treasuries", default-features = false, version = "21.4.0" }
pallet-encointer-offline-payment = { path = "offline-payment", default-features = false, version = "0.1.0" }
test-utils = { path = "test-utils" }
# rpc apis
encointer-balances-tx-payment-rpc-runtime-api = { path = "balances-tx-payment/rpc/runtime-api", version = "21.1.0" }
pallet-encointer-bazaar-rpc-runtime-api = { path = "bazaar/rpc/runtime-api", version = "21.1.0" }
pallet-encointer-ceremonies-rpc-runtime-api = { path = "ceremonies/rpc/runtime-api", version = "21.1.0" }
pallet-encointer-communities-rpc-runtime-api = { path = "communities/rpc/runtime-api", version = "21.1.0" }
pallet-encointer-treasuries-rpc-runtime-api = { path = "treasuries/rpc/runtime-api", version = "21.3.0" }

# various
array-bytes = "6.1.0"
bs58 = { version = "0.5.0", default-features = false, features = ["alloc"] }
crc = "3.2.1"
fixed = { package = "substrate-fixed", default-features = false, version = "0.6.0" }
geohash = { package = "substrate-geohash", version = "0.14.0" }
impl-serde = { version = "0.5.0", default-features = false }
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
log = { version = "0.4.20", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive", "max-encoded-len"] }
parking_lot = "0.12.1"
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.197", default-features = false, features = ["derive", "alloc"] }
thiserror = "2.0.11"

# polkadot-sdk [no_std]
frame-benchmarking = { version = "45.0.0", default-features = false }
frame-support = { version = "45.0.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
pallet-asset-tx-payment = { version = "45.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-application-crypto = { version = "44.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# rpc stuff [std]
jsonrpsee = { version = "0.24.7", features = ["client-core", "server", "macros"] }
jsonrpsee-core = { version = "0.24.7" }
jsonrpsee-types = { version = "0.24.7" }
pallet-transaction-payment-rpc = { version = "48.0.0" }
sc-rpc = "50.0.0"
sc-rpc-api = "0.54.0"
sp-blockchain = "43.0.0"
sp-rpc = "37.0.0"

# dev deps
approx = "0.5.1"
itertools = "0.11.0"
rstest = "0.12.0"
serde_json = "1.0.114"
sp-inherents = "40.0.0"
sp-keyring = "45.0.0"
sp-keystore = "0.45.0"

#[patch.crates-io]
#substrate-fixed = { path = "../substrate-fixed"}
#typenum = { path = "../typenum"}
#geohash = { path = "../geohash"}
