[package]
name = "encointer-balances-tx-payment"
version = "3.0.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Balances tx payment for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
log = { version = "0.4.20", default-features = false }

encointer-primitives = { path = "../primitives", default-features = false, version = "3.0.0" }
pallet-encointer-balances = { path = "../balances", default-features = false, version = "3.0.0" }
pallet-encointer-ceremonies = { path = "../ceremonies", default-features = false, version = "3.0.0" }

# substrate dependencies
frame-support = { default-features = false, version = "25.0.0" }
frame-system = { default-features = false, version = "25.0.0" }
pallet-asset-tx-payment = { default-features = false, version = "25.0.0" }
pallet-transaction-payment = { default-features = false, version = "25.0.0" }
sp-runtime = { default-features = false, version = "28.0.0" }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = [
    "derive",
] }
rstest = "0.12.0"
scale-info = { version = "2.10.0", default-features = false }
sp-io = "27.0.0"
test-utils = { path = "../test-utils" }

[features]
default = [ "std" ]
std = [
	"encointer-primitives/std",
	# substrate deps
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-asset-tx-payment/std",
	# encointer deps
	"pallet-encointer-balances/std",
	"pallet-encointer-ceremonies/std",
	"pallet-transaction-payment/std",
	"sp-runtime/std",
]

try-runtime = [
	"frame-system/try-runtime",
	"pallet-encointer-balances/try-runtime",
	"pallet-encointer-ceremonies/try-runtime",
]
runtime-benchmarks = []
