[package]
name = "encointer-balances-tx-payment"
version = "5.0.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Balances tx payment for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
log = { workspace = true }

encointer-primitives = { workspace = true }
pallet-encointer-balances = { workspace = true }
pallet-encointer-ceremonies = { workspace = true }

# substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-asset-tx-payment = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
parity-scale-codec = { workspace = true }
rstest = { workspace = true }
scale-info = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
test-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "encointer-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-asset-tx-payment/std",
    "pallet-encointer-balances/std",
    "pallet-encointer-ceremonies/std",
    "pallet-transaction-payment/std",
    "sp-runtime/std",
]

try-runtime = [
    "frame-system/try-runtime",
    "pallet-encointer-balances/try-runtime",
    "pallet-encointer-ceremonies/try-runtime",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-encointer-balances/runtime-benchmarks",
    "pallet-encointer-ceremonies/runtime-benchmarks",
]
