[package]
name = "pallet-encointer-balances"
version = "1.2.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Balances pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
approx = { version = "0.5.1", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.5.0", default-features = false }

# local deps
encointer-primitives = { path = "../primitives", default-features = false, features = ["serde_derive"] }

# substrate deps
frame-benchmarking = { default-features = false, optional = true, version = "23.0.0" }
frame-support = { default-features = false, version = "23.0.0" }
frame-system = { default-features = false, version = "23.0.0" }
pallet-asset-tx-payment = { default-features = false, version = "23.0.0" }
pallet-transaction-payment = { default-features = false, version = "23.0.0" }
sp-runtime = { default-features = false, version = "26.0.0" }
sp-std = { default-features = false, version = "10.0.0" }

[dev-dependencies]
approx = "0.5.1"
sp-io = "25.0.0"
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    # local deps
    "encointer-primitives/std",
    # substrate deps
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "pallet-asset-tx-payment/std",
    "pallet-transaction-payment/std",
]

runtime-benchmarks = ["frame-benchmarking", "approx"]

try-runtime = ["frame-system/try-runtime"]
