[package]
name = "pallet-encointer-balances"
version = "5.0.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Balances pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
approx = { workspace = true, optional = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# local deps
encointer-primitives = { workspace = true }

# substrate deps
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-asset-tx-payment = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
approx = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
test-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "encointer-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-asset-tx-payment/std",
    "pallet-transaction-payment/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "approx",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-system/try-runtime"]
