[package]
name = "pallet-encointer-bazaar"
version = "6.1.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Bazaar pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# local deps
encointer-primitives = { workspace = true }
pallet-encointer-communities = { workspace = true }

# substrate deps
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
test-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "encointer-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-encointer-communities/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
]

runtime-benchmarks = [
    "pallet-encointer-communities/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]

try-runtime = [
    "frame-system/try-runtime",
    "pallet-encointer-communities/try-runtime",
]
