[package]
name = "pallet-encointer-ceremonies"
version = "3.0.4"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Ceremonies pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = [
    "derive",
] }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false }

# local deps
encointer-balances = { package = "pallet-encointer-balances", path = "../balances", default-features = false, version = "3.0.2" }
encointer-ceremonies-assignment = { path = "assignment", default-features = false, version = "3.0.2" }
encointer-communities = { package = "pallet-encointer-communities", path = "../communities", default-features = false, version = "3.0.3" }
encointer-meetup-validation = { path = "meetup-validation", default-features = false, version = "3.0.2" }
encointer-primitives = { path = "../primitives", default-features = false, features = ["serde_derive"], version = "3.0.2" }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler", default-features = false, version = "3.0.3" }

# substrate deps
frame-support = { default-features = false, version = "25.0.0" }
frame-system = { default-features = false, version = "25.0.0" }
pallet-timestamp = { default-features = false, version = "24.0.0" }
sp-core = { default-features = false, version = "25.0.0" }
sp-io = { default-features = false, version = "27.0.0" }
sp-runtime = { default-features = false, version = "28.0.0" }
sp-std = { default-features = false, version = "12.0.0" }

# benchmarking
frame-benchmarking = { default-features = false, optional = true, version = "25.0.0" }
sp-application-crypto = { default-features = false, optional = true, version = "27.0.0" }

[dev-dependencies]
approx = "0.5.1"
itertools = "0.10.3"
rstest = "0.12.0"
sp-io = "27.0.0"
sp-keystore = "0.31.0"
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "codec/std",
    "encointer-balances/std",
    "encointer-ceremonies-assignment/std",
    "encointer-communities/std",
    "encointer-meetup-validation/std",
    "encointer-primitives/std",
    "encointer-scheduler/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-timestamp/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]

runtime-benchmarks = [
    "encointer-balances/runtime-benchmarks",
    "encointer-communities/runtime-benchmarks",
    "encointer-scheduler/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-application-crypto",
]

try-runtime = [
    "encointer-balances/try-runtime",
    "encointer-communities/try-runtime",
    "encointer-scheduler/try-runtime",
    "frame-system/try-runtime",
]

mocks = []
