[package]
name = "pallet-encointer-ceremonies"
version = "3.0.4"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Ceremonies pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

# local deps
encointer-balances = { package = "pallet-encointer-balances", path = "../balances", default-features = false, version = "3.0.2" }
encointer-ceremonies-assignment = { path = "assignment", default-features = false, version = "3.0.2" }
encointer-communities = { package = "pallet-encointer-communities", path = "../communities", default-features = false, version = "3.0.3" }
encointer-meetup-validation = { path = "meetup-validation", default-features = false, version = "3.0.2" }
encointer-primitives = { path = "../primitives", default-features = false, features = ["serde_derive"], version = "3.0.2" }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler", default-features = false, version = "3.0.3" }

# substrate deps
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# benchmarking
frame-benchmarking = { workspace = true, optional = true }
sp-application-crypto = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
itertools = { workspace = true }
rstest = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "encointer-balances/std",
    "encointer-ceremonies-assignment/std",
    "encointer-communities/std",
    "encointer-meetup-validation/std",
    "encointer-primitives/std",
    "encointer-scheduler/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-timestamp/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]

runtime-benchmarks = [
    "encointer-balances/runtime-benchmarks",
    "encointer-communities/runtime-benchmarks",
    "encointer-scheduler/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-application-crypto",
]

try-runtime = [
    "encointer-balances/try-runtime",
    "encointer-communities/try-runtime",
    "encointer-scheduler/try-runtime",
    "frame-system/try-runtime",
]

mocks = []
