[package]
name = "pallet-encointer-communities"
version = "3.0.3"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Communities pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

# local deps
encointer-balances = { package = "pallet-encointer-balances", path = "../balances", default-features = false, version = "3.0.2" }
encointer-primitives = { path = "../primitives", default-features = false, features = ["serde_derive"], version = "3.0.2" }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler", default-features = false, version = "3.0.3" }

# substrate deps
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "encointer-balances/std",
    # local deps
    "encointer-primitives/std",
    "encointer-scheduler/std",
    # substrate deps
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "encointer-balances/runtime-benchmarks",
    "encointer-scheduler/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",

]
try-runtime = [
    "encointer-balances/try-runtime",
    "encointer-scheduler/try-runtime",
    "frame-system/try-runtime",

]
